--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href=./styles/style.css>
     <link href="https://fonts.googleapis.com/css?family=Coda|Press+Start+2P|Noto+Sans|Calistoga&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/faviconSpade.png">
     <title>BlackJack!</title>
 </head>
 <body>
-    <header>
+    <header class="wrapper">
         <h1>BlackJack️</h1>
-        <h2 class="banner">Player One Goes First</h2>
+        <h2 class="banner"></h2>
     </header>
-    <main>
+    <main class="wrapper">
         <div class="buttons">
-            <button class="hit-me">Hit Me!</button>
-            <button class="stay">Stay</button>
-            <button class="new-round">Next Round</button>
+            <button class="hitMe" disabled="true">Hit Me!</button>
+            <button class="stay" disabled="true">Stay</button>
+            <button class="newRound"disabled="true">Next Round</button>
         </div>
-        <section class="player-one">
-            <div class="sub-title">
+        <section class="playerOne">
+            <div class="subTitle">
                 <h2 class="name">Player 1</h2>
-                <div class="display-money">
+                <div class="displayMoney">
                     <h2>Bank:</h2>
                     <p class="money"></p>
                 </div>
@@ -31,10 +31,10 @@
             <div class="hand">
             </div>
         </section>
-        <section class="player-two">
-            <div class="sub-title">
+        <section class="playerTwo">
+            <div class="subTitle">
                 <h2 class="name">Player 2</h2>
-                <div class="display-money">
+                <div class="displayMoney">
                     <h2>Bank:</h2>
                     <p class="money"></p>
                 </div>
@@ -42,8 +42,12 @@
             <div class="hand">
             </div>
         </section>
+        <div id="dialog" class="instructions" title="">
+            <p>Player one goes first<br>Win $2/round, $4 for Blackjack<br>Game over at $0<br>Regular Blackjack rules apply.</p>
+        </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
