--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </section>
         <div id="dialog" class="instructions" title="">
-            <p>Two player game<br>Player one goes first<br>Win $2/round, $4 for Blackjack<br>Game over at $0<br>Regular Blackjack rules apply.</p>
+            <p>Player one goes first<br>Win $2/round, $4 for Blackjack<br>Game over at $0<br>Regular Blackjack rules apply.</p>
         </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
