--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href=./styles/style.css>
-    <link href="https://fonts.googleapis.com/css?family=Coda|Press+Start+2P|Noto+Sans|Calistoga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coda|Press+Start+2P|Noto+Sans&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/faviconSpade.png">
     <title>BlackJack!</title>
 </head>
@@ -43,7 +43,7 @@
             </div>
         </section>
         <div id="dialog" class="instructions" title="">
-            <p>Two player game<br>Win $2/round, $4 for Blackjack<br>Game over at $0<br>Regular Blackjack rules apply.</p>
+            <p>Two players<br>Player one goes first<br>Win $2/round, $4 for Blackjack<br>Game over at $0<br>Regular Blackjack rules apply.</p>
         </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
