--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="wrapper">
-        <h1>BlackJack️</h1>
+        <h1>BlackJac</h1>
         <h2 class="banner"></h2>
     </header>
     <main class="wrapper">
